Add program parser and its tests.